All Logs api Added
